--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.5;
     background: #f2f2f2;
+    background-image: linear-gradient(to bottom right, rgb(116, 116, 116) , #f2f2f2);
     color: #323232
 }
 
