--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     line-height: 1.5;
     background: #f2f2f2;
     background-image: linear-gradient(to bottom right, rgb(116, 116, 116) , #f2f2f2);
-    color: #323232
+    color: #323232;
 }
 
 img{
