--- a/style.css
+++ b/style.css
@@ -165,8 +165,8 @@ Certifications
 
 .skills-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 0px;
     margin-bottom: 0px;
   }
 
