--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ Certifications
   
     .skills-container {
       grid-template-columns: 1fr 1fr;
+      grid-row-gap: 15px;
     }
   
     .interests-container {
