--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.5;
     background: #f2f2f2;
-    background-image: linear-gradient(to bottom right, rgb(115, 115, 115) , #f2f2f2);
+    background-image: linear-gradient(to bottom right, rgb(1, 6, 41) , #ffffff);
     color: #323232;
 }
 
