--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     line-height: 1.5;
     background: #f2f2f2;
     background-image: linear-gradient(to bottom right, rgb(1, 6, 41) , #ffffff);
+    background-attachment: fixed;
     color: #323232;
 }
 
