--- a/style.css
+++ b/style.css
@@ -82,11 +82,9 @@ img.avatar {
   line-height: 1;
 }
 
-.my-title {
+.space {
   font-size: 24px;
   font-weight: 300;
-  /* color: #236FB2; */
-  color: #da5555;
   margin-bottom: 36px;
 }
 
